* NEI Integration for a lot of things
* Bunch of New Foods
* Guide Books (With Custom book support, so you can write your own guides(xml based out of game).
* Right clicking a squid with a fishing net will use up the net and drop a live raw squid
====Changes====
* Rewote 95% of things, should a lot less laggy
* Nerfed Calamari(Less Saturation(still more than steak), gives 2 instead of 3 on crafting) and Buffed Fish Fingers (Gives 64).
* Completely removed Limestone Stairs/Slabs, as not needed. Also removed all the molten metals in block form, was it really neccessary?
* Full Dropped BC Power Support, now you can only use RF to Power my machines, and turbines will only provide RF
* Removed ConfigCopier/LegacyLoader > If upgrading from previous version, make sure to load Mariculture on 1.1.4 FIRST
* Oysters are more special ;)
* Scalable melting of damaged items.
* Air Pumps, are now 'tanks'. Instead of passing directly any gas they get to tanks, they now have an internal tank buffer of 8 buckets, which they will then attempt to transfer to the side.
* Right clicking an air pump with an item that rotates blocks such as a wrench will cause it to display, where you need air blocks
* Air Pumps now need larger areas in order to pump, however, Up to 6 Blocks in that area do not have to be air (So you can have ur engines on any side now)
* Air Pumps radius changed: Engine - 40 XZ, 50Y; Manual - 64 XZ: 64Y; Redstone - 25 XZ, 36Y
* No longer auto-outputting to any pipes, use itemducts
* Autofisher now uses more power to work
* Turbine Recipes changed
* Turbines (except manual) now need to be kept supplied with a Rotor, in order to operate
* Sluice no longer has a gui, no longer needs wheels, can no longer take upgrades and no longer moves blocks(still picks up and places with tanks). They generate 10mB of Pressurised Water per Height every 10 seconds. They will only transfer their liquid automatically if they have a redstone signal.