@@ -168,5 +168,11 @@
         <text y="-5" bold="true">Reaper</text>
         <text y="12">Reaper protects you upon Death. At level 1 your items will not be lost upon death. At level 2, sometimes you will spawn exactly where you died. And at level 3 you will resist damage for a short while after respawning.</text>
         <text y="59" bold="true">Max Level: 3</text>
+        <hr y="75"></hr>
+        
+        <text y="90" bold="true">Luck of the Irish
+(Mirrors and Fishing Rods)</text>
+        <text y="132">This enchantment gives bonus enchantability when enchanting with mirrors, or increases your catch rate with fishing rods. (Better chance in autofishers).</text>
+        <text y="150" bold="true">Max Level: 5</text>
     </page>
 </book>
