@@ -425,6 +425,7 @@ enchantment.oneRing.line2=One Ring to find them,
 enchantment.oneRing.line3=One Ring to bring them all
 enchantment.oneRing.line4=and in the darkness bind them.
 enchantment.stepUp=Step Up
+enchantment.luck=Luck of the Irish
 
 #items
 item.guide.enchants.name=A Seawitch's Guide
