@@ -6,6 +6,7 @@ Power Punch Sound - http://www.freesound.org/people/Ekokubza123/sounds/104183/
 Fire Punch Sound - http://www.freesound.org/people/Nic3_one/sounds/166550/
 Blink Sound - http://www.freesound.org/people/Andromadax24/sounds/178350/
 Resurrection Sound - http://www.freesound.org/people/noirenex/sounds/159408/
+Hammer Sound - http://www.freesound.org/people/Dvideoguy/sounds/207782/
 
 COFH Team - RF Energy System & Some Helpers
 SlimeKnights - For open sourcing, making parts of the guides and rendering more understandable
