@@ -25,6 +25,7 @@ import mariculture.magic.enchantments.EnchantmentFlight;
 import mariculture.magic.enchantments.EnchantmentGlide;
 import mariculture.magic.enchantments.EnchantmentHealth;
 import mariculture.magic.enchantments.EnchantmentJump;
+import mariculture.magic.enchantments.EnchantmentLuck;
 import mariculture.magic.enchantments.EnchantmentNeverHungry;
 import mariculture.magic.enchantments.EnchantmentOneRing;
 import mariculture.magic.enchantments.EnchantmentPoison;
@@ -101,6 +102,7 @@ public class Magic extends Module {
 	public static Enchantment resurrection;
 	public static Enchantment speed;
 	public static Enchantment stepUp;
+	public static Enchantment luck;
 	
 	public static Item basicMirror;
 	public static Item magicMirror;
@@ -128,6 +130,7 @@ public class Magic extends Module {
 		if(EnchantIds.resurrection > 0) { resurrection = new EnchantmentResurrection(EnchantIds.resurrection, 1, EnumEnchantmentType.all); }
 		if(EnchantIds.speed > 0) { speed = new EnchantmentSpeed(EnchantIds.speed, 10, EnumEnchantmentType.all); }
 		if(EnchantIds.stepUp > 0) { stepUp = new EnchantmentStepUp(EnchantIds.stepUp, 9, EnumEnchantmentType.all); }
+		if(EnchantIds.luck > 0) { luck = new EnchantmentLuck(EnchantIds.luck, 5, EnumEnchantmentType.all); }
 	}
 
 	@Override
@@ -141,8 +144,8 @@ public class Magic extends Module {
 	@Override
 	public void registerItems() {
 		basicMirror = new ItemMirror(ItemIds.basicMirror, "mirror").setUnlocalizedName("mirror.basic");
-		magicMirror = new ItemMagicMirror(ItemIds.magicMirror, 1, 30, "mirror").setUnlocalizedName("mirror.magic");
-		celestialMirror = new ItemMagicMirror(ItemIds.celestialMirror, 31, 60, "celestialMirror").setUnlocalizedName("mirror.celestial");
+		magicMirror = new ItemMagicMirror(ItemIds.magicMirror, 1, 30, "magicMirror", 15, 1000).setUnlocalizedName("mirror.magic");
+		celestialMirror = new ItemMagicMirror(ItemIds.celestialMirror, 31, 60, "celestialMirror",20, 10000).setUnlocalizedName("mirror.celestial");
 		ring = new ItemRing(ItemIds.ring).setUnlocalizedName("ring");
 		bracelet = new ItemBracelet(ItemIds.bracelet).setUnlocalizedName("bracelet");
 		necklace = new ItemNecklace(ItemIds.necklace).setUnlocalizedName("necklace");
